src/objects/Lead__c.object
<CustomObject>
    <description>Booking sheet with record type</description>
    <fields>
        <fullName>AccountProviso__c</fullName>
        <label>但し書き内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountReceiptName__c</fullName>
        <label>請求書宛名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountRefDiffFlgCal__c</fullName>
        <formula>( LeadAccountIdCal__c == refAccount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>請求先一致フラグ（システム用）</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgtFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>リアルブロック</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillIssue__c</fullName>
        <description>ケータリング支払い関係（事前入金の請求書発効日）</description>
        <label>請求書発効日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BillSaveFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求書確定FLG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingCal__c</fullName>
        <formula>IF ( ISBLANK(Relcontact__r.Account.Name) , (Relcontact__r.LastName &amp; &apos; &apos; &amp; Relcontact__r.FirstName) ,Relcontact__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ご請求先</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookingDataID__c</fullName>
        <label>予約番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookingFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BookingFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BridalDantaikei__c</fullName>
        <label>見積合計(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BusArrivalTime__c</fullName>
        <label>送迎バス_現着時間</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>21:30</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>22:30</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
                <value>
                    <fullName>23:30</fullName>
                </value>
                <value>
                    <fullName>24:00</fullName>
                </value>
                <value>
                    <fullName>24:30</fullName>
                </value>
                <value>
                    <fullName>1:00</fullName>
                </value>
                <value>
                    <fullName>1:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusCapacity__c</fullName>
        <label>送迎バス_乗車定員</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusDepartureTime__c</fullName>
        <label>送迎バス_出発時間</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>21:30</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>22:30</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
                <value>
                    <fullName>23:30</fullName>
                </value>
                <value>
                    <fullName>24:00</fullName>
                </value>
                <value>
                    <fullName>24:30</fullName>
                </value>
                <value>
                    <fullName>1:00</fullName>
                </value>
                <value>
                    <fullName>1:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusDestination__c</fullName>
        <label>送迎バス_目的地</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusOrigin__c</fullName>
        <label>送迎バス_出発地</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusPassengers__c</fullName>
        <label>送迎バス_乗車予定数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusWelcomeSend__c</fullName>
        <label>送迎バス_お迎え・お送り</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>お迎え</fullName>
                </value>
                <value>
                    <fullName>お送り</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CancelBool__c</fullName>
        <formula>If (ISPICKVAL( ReservedStatus__c , &quot;キャンセル&quot;) || ISPICKVAL( ReservedStatus__c , &quot;NO SHOW&quot;) || ISPICKVAL( ReservedStatus__c , &quot;削除&quot;) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>予約ステータスがキャンセルであれば1でなければ0を返す</inlineHelpText>
        <label>CancelBool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CateringType__c</fullName>
        <description>ケータリング項目</description>
        <label>ケータリング種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>サービス</fullName>
                </value>
                <value>
                    <fullName>和食</fullName>
                </value>
                <value>
                    <fullName>洋食</fullName>
                </value>
                <value>
                    <fullName>中華</fullName>
                </value>
                <value>
                    <fullName>フロント</fullName>
                </value>
                <value>
                    <fullName>ケータ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargeUserNm__c</fullName>
        <label>担当者（発注元）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check369__c</fullName>
        <formula>IF (   ISPICKVAL(Field298__c, &quot;チェックイン完&quot;) , IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;Checkin&quot;, &quot;チェックイン完&quot;) , IF ( ISPICKVAL(Field298__c, &quot;チェックアウト完&quot;) , IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;Chechout&quot;, &quot;チェックアウト完&quot;) ,  IF ( ISPICKVAL(Field298__c, &quot;外出中&quot;) , IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;GoingOutside&quot;, &quot;外出中&quot;),IF ( ISPICKVAL(Field298__c, &quot;入浴中&quot;) , IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;Bathing&quot;, &quot;入浴中&quot;),&quot;&quot;)) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckDantai__c</fullName>
        <formula>IF ( ISPICKVAL(ReservedType__c, &quot;婚礼&quot;) || CONTAINS(Name, &quot;婚礼&quot;) || CONTAINS( lunchX02__r.Name , &quot;婚礼&quot;) || CONTAINS( food1__r.Name , &quot;婚礼&quot;)  ||  ISPICKVAL(ReservedType__c, &quot;団体 夕&quot;)  ||  ISPICKVAL(ReservedType__c, &quot;団体 昼&quot;), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>予約タイプが婚礼、または、予約名が婚礼、昼料理1、 2が婚礼、団体、</inlineHelpText>
        <label>CheckDantai</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckGBL__c</fullName>
        <formula>IF ( RIGHT(Name  , 1) = &quot;a&quot;  || RIGHT(Name  , 1)  =  &quot;b&quot;  || RIGHT(Name  , 1)  = &quot;c&quot;|| RIGHT(Name  , 1)  = &quot;d&quot;|| RIGHT(Name  , 1)  = &quot;e&quot;|| RIGHT(Name  , 1)  = &quot;f&quot;|| RIGHT(Name  , 1)  = &quot;g&quot;|| RIGHT(Name  , 1)  = &quot;h&quot;|| RIGHT(Name  , 1)  = &quot;i&quot;|| RIGHT(Name  , 1)  = &quot;j&quot;|| RIGHT(Name  , 1)  = &quot;k&quot;|| RIGHT(Name  , 1)  = &quot;l&quot;|| RIGHT(Name  , 1)  = &quot;m&quot;|| RIGHT(Name  , 1)  = &quot;n&quot;|| RIGHT(Name  , 1)  = &quot;o&quot;|| RIGHT(Name  , 1)  = &quot;p&quot;|| RIGHT(Name  , 1)  = &quot;q&quot;|| RIGHT(Name  , 1)  = &quot;r&quot;|| RIGHT(Name  , 1)  = &quot;s&quot;|| RIGHT(Name  , 1)  = &quot;t&quot;|| RIGHT(Name  , 1)  = &quot;u&quot;|| RIGHT(Name  , 1)  = &quot;v&quot;|| RIGHT(Name  , 1)  = &quot;w&quot;|| RIGHT(Name  , 1)  = &quot;x&quot;|| RIGHT(Name  , 1)  = &quot;y&quot;|| RIGHT(Name  , 1)  = &quot;z&quot;|| RIGHT(Name  , 1)  = &quot;A&quot; || RIGHT(Name  , 1)  =  &quot;B&quot;  || RIGHT(Name  , 1)  = &quot;C&quot;|| RIGHT(Name  , 1)  = &quot;D&quot;|| RIGHT(Name  , 1)  = &quot;E&quot;|| RIGHT(Name  , 1)  = &quot;F&quot;|| RIGHT(Name  , 1)  = &quot;G&quot;|| RIGHT(Name  , 1)  = &quot;H&quot;|| RIGHT(Name  , 1)  = &quot;I&quot;|| RIGHT(Name  , 1)  = &quot;J&quot;|| RIGHT(Name  , 1)  = &quot;K&quot;|| RIGHT(Name  , 1)  = &quot;L&quot;|| RIGHT(Name  , 1)  = &quot;M&quot;|| RIGHT(Name  , 1)  = &quot;N&quot;|| RIGHT(Name  , 1)  = &quot;O&quot;|| RIGHT(Name  , 1)  = &quot;P&quot;|| RIGHT(Name  , 1)  = &quot;Q&quot;|| RIGHT(Name  , 1)  = &quot;R&quot;|| RIGHT(Name  , 1)  = &quot;S&quot;|| RIGHT(Name  , 1)  = &quot;T&quot;|| RIGHT(Name  , 1)  = &quot;U&quot;|| RIGHT(Name  , 1)  = &quot;V&quot;|| RIGHT(Name  , 1)  = &quot;W&quot;|| RIGHT(Name  , 1)  = &quot;X&quot;|| RIGHT(Name  , 1)  = &quot;Y&quot;|| RIGHT(Name  , 1)  = &quot;Z&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckGBL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckLunch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>部屋出しのときチェックを入れる</inlineHelpText>
        <label>昼食部屋出し</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkmorining__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>部屋出しのときはチェックを入れる</inlineHelpText>
        <label>朝食部屋出し</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChekDinner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>部屋出しのときはチェックを入れる</inlineHelpText>
        <label>夕食部屋出し</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chennel__c</fullName>
        <formula>IF( ISPICKVAL(Field2__c,&quot;電話&quot;),&quot;電話&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;自社サイト&quot;),&quot;自社サイト&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;自社サイト[English]&quot;),&quot;自社サイト&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;自社サイト[Chaina]&quot;),&quot;自社サイト&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;自社サイト[Korea]&quot;),&quot;自社サイト&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;自社サイト[Thailand]&quot;),&quot;自社サイト&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[JTB]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[KNT]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[NTA]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[小田急トラベル]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[相鉄観光]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[一休]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[らくだ]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[じゃらん]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[楽天]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[るるぶ]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[トクー]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[ゆこゆこ]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[リロクラブ]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[ウェルボックス]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[ベネフィットワン]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[リゾートソリューション]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[expedia]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[BOOKING.COM]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[agoda]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[ORBITZ]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[Tablet Hotels]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;AGT[Travelocity]&quot;),&quot;AGT&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;FAX&quot;),&quot;その他&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;来館にて&quot;),&quot;その他&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;ウォークイン&quot;),&quot;その他&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;クチコミ紹介&quot;),&quot;その他&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;営業&quot;),&quot;その他&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;旅行会社を経由して&quot;),&quot;その他&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;パンフレットを見て&quot;),&quot;その他&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;新聞雑誌テレビを見て&quot;),&quot;その他&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;知人の紹介&quot;),&quot;その他&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;以前来られた&quot;),&quot;その他&quot;,&quot;&quot;)+
IF( ISPICKVAL(Field2__c,&quot;その他&quot;),&quot;その他&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>予約チャネル[カテゴリ]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChildC__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>幼児（食事あり、寝具あり）</inlineHelpText>
        <label>小人C</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChildD__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>幼児（食事なし、寝具あり）</inlineHelpText>
        <label>小人D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChildE__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>幼児（食事あり、寝具なし）</inlineHelpText>
        <label>小人E</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChildFA__c</fullName>
        <defaultValue>NULLVALUE ($Setup.CommDefine__c.BookingChildrenDef__c,0)</defaultValue>
        <inlineHelpText>小学生（高学年）
子供ふ有</inlineHelpText>
        <label>小人A</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChildF__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>幼児（食事なし、寝具なし）</inlineHelpText>
        <label>小人F</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChildOther__c</fullName>
        <defaultValue>0</defaultValue>
        <label>小人その他</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Childs__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>小学生（低学年）
子供ふ無</inlineHelpText>
        <label>小人B</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chu1__c</fullName>
        <label>昼 料理2 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chuuijikou__c</fullName>
        <inlineHelpText>担当者の判断にて、考慮した方がよいことがら</inlineHelpText>
        <label>コメント欄</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CnCookCheckTime__c</fullName>
        <label>中華調理_確認日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CnCookCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>中華調理_確認済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CnCookChecker__c</fullName>
        <label>中華調理_確認者</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nakayama</fullName>
                </value>
                <value>
                    <fullName>Tsushima</fullName>
                </value>
                <value>
                    <fullName>Yamamoto</fullName>
                </value>
                <value>
                    <fullName>Takahashi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment1__c</fullName>
        <inlineHelpText>予約のとき、感じたことを思いのままに！</inlineHelpText>
        <label>所感</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment2__c</fullName>
        <inlineHelpText>ご予約以降に、問題となることがら</inlineHelpText>
        <label>問題点</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment3__c</fullName>
        <inlineHelpText>ご予約以降に、考慮すべき重要なことがら</inlineHelpText>
        <label>特記事項</label>
        <length>2048</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ContactAddress__c</fullName>
        <label>お客様住所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <label>お客様Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactKatakana__c</fullName>
        <label>お客様ひらがな</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <label>お客様Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactPostalCode__c</fullName>
        <label>お客様郵便番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractDate__c</fullName>
        <label>契約日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CouponTypeLst__c</fullName>
        <label>金券種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>楽天クーポン</fullName>
                </value>
                <value>
                    <fullName>JTBクーポン</fullName>
                </value>
                <value>
                    <fullName>H.I.Sクーポン</fullName>
                </value>
                <value>
                    <fullName>楽天ポイント</fullName>
                </value>
                <value>
                    <fullName>JTBポイント</fullName>
                </value>
                <value>
                    <fullName>H.I.Sポイント</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DayNightCal__c</fullName>
        <formula>IF ( Hiru__c = 1 &amp;&amp; (DATEVALUE(Departure__c) = DATEVALUE(EntryTime__c) ),
      IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;Day&quot;, &quot;昼&quot;) , &quot;&quot;)</formula>
        <label>昼と夜</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(EntryTime__c)), 
   1, 31, 
   2, if(OR(AND(MOD(YEAR(DATEVALUE(EntryTime__c)),4) == 0,MOD(YEAR(DATEVALUE(EntryTime__c)),100) != 0),MOD(YEAR(DATEVALUE(EntryTime__c)),400) == 0),29,28),
   3,31,
   4,30,
   5,31,
   6,30,
   7,31,
   8,31,
   9,30,
   10,31,
   11,30,
   12,31,
   31
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryDate__c</fullName>
        <label>納品日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DepartureDateIntKey__c</fullName>
        <description>出発日付はインデックスを利用するため、日付情報を格納する</description>
        <externalId>true</externalId>
        <label>出発日付キー2(システム用)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DepartureDateKey__c</fullName>
        <externalId>true</externalId>
        <label>出発日付キー(システム用)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure__c</fullName>
        <defaultValue>NOW()+1</defaultValue>
        <inlineHelpText>お客様が帰られる予定の日付を選択してください。
入力して頂くことで、ご宿泊数などを算出いたします。</inlineHelpText>
        <label>出発日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dinner2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>夕 料理3</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (夕 料理3)</relationshipLabel>
        <relationshipName>R00N10000000rdOCEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dinner3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>夕 料理4</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (夕 料理4)</relationshipLabel>
        <relationshipName>R00N10000000rdOHEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dinner4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>夕 料理5</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (夕 料理5)</relationshipLabel>
        <relationshipName>R00N10000000rdOMEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DrinkComment__c</fullName>
        <label>お飲物_コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DrinkControl1__c</fullName>
        <description>ケータリング用（実数ドリンク規制）</description>
        <label>金額上限</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DrinkControl2__c</fullName>
        <description>ケータリング用（実数ドリンク規制２）</description>
        <label>追加ドリンク確認</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DrinkName__c</fullName>
        <description>ケータリング用（ドリンク指定銘柄）</description>
        <label>指定銘柄</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DrinkStyle__c</fullName>
        <label>お飲物形式</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>フリードリンク</fullName>
                </value>
                <value>
                    <fullName>カウント</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnkaiNO__c</fullName>
        <description>ケータリング項目（宴会NO）</description>
        <label>宴会NO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntryDateIntKey__c</fullName>
        <description>到着日付はインデックスを利用するため、日付情報を格納する</description>
        <externalId>true</externalId>
        <label>到着日付キー2(システム用)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EntryDateKey__c</fullName>
        <description>到着日付はインデックスを利用するため、日付情報を格納する</description>
        <externalId>true</externalId>
        <label>到着日付キー(システム用)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntryTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>お客様が来られる予定の日付を選択してください。</inlineHelpText>
        <label>到着日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EstimateTotal__c</fullName>
        <label>見積合計</label>
        <summarizedField>BookingEstimateItem__c.SpTotal__c</summarizedField>
        <summaryFilterItems>
            <field>BookingEstimateItem__c.AccountOutside__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>BookingEstimateItem__c.ActionType__c</field>
            <operation>notEqual</operation>
            <value>支払, 前受付金</value>
        </summaryFilterItems>
        <summaryForeignKey>BookingEstimateItem__c.refBooking__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EuCookCheckTime__c</fullName>
        <label>洋食調理_確認日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EuCookCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>洋食調理_確認済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EuCookChecker__c</fullName>
        <label>洋食調理_確認者</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oonishi</fullName>
                </value>
                <value>
                    <fullName>Kurotaki</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>該当項目が「ON」の場合、ご予約情報により、行動情報を自動作成する</inlineHelpText>
        <label>行動作成</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventId__c</fullName>
        <inlineHelpText>画面項目「行動作成」がON場合、登録した予約情報で行動データを自動作成し、作成した行動IDを該当項目に格納する</inlineHelpText>
        <label>自動作成の行動ID(システム用)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventSource__c</fullName>
        <label>発生源</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>メール取込</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExchangeTaxRate__c</fullName>
        <defaultValue>$Setup.CommDefine__c.ExchangeTaxRate__c</defaultValue>
        <inlineHelpText>外貨から日本の通貨へ変換する場合、該当消費税で使って、内消費税を計算する</inlineHelpText>
        <label>日本消費税</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ExtraBedChk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>エキストラベッド(E/B)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Femails__c</fullName>
        <defaultValue>NULLVALUE ($Setup.CommDefine__c.BookingFemailsDef__c, 0)</defaultValue>
        <inlineHelpText>ご予約の人数の内訳、女性の人数を入力してください。</inlineHelpText>
        <label>女性</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field13__c</fullName>
        <label>コンパニオン[和]</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field15__c</fullName>
        <label>コンパニオン[洋]</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field16__c</fullName>
        <label>マッサージ</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field4Cal__c</fullName>
        <formula>TEXT(Field4__c )</formula>
        <label>到着時刻</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FoodComment__c</fullName>
        <label>お料理_コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FrontCheckTime__c</fullName>
        <label>フロント_確認日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FrontCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>フロント_確認済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FrontChecker__c</fullName>
        <label>フロント_確認者</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mushiga</fullName>
                </value>
                <value>
                    <fullName>Furukawa</fullName>
                </value>
                <value>
                    <fullName>tUeno</fullName>
                </value>
                <value>
                    <fullName>Sekiya</fullName>
                </value>
                <value>
                    <fullName>Ishida</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GuestType__c</fullName>
        <label>ラックレート明細（プラン種別）</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hall1__c</fullName>
        <description>ケータリング用（ホール申請書）</description>
        <label>ホール申請書</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>